--- a/Views/Account/PatientRegister.cshtml
+++ b/Views/Account/PatientRegister.cshtml
@@ -19,7 +19,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="DateOfBirth"></label>
-                            <input asp-for="DateOfBirth" class="form-control" type="date" />
+                            <input asp-for="DateOfBirth" class="form-control" type="date" max="@DateTime.Now.ToString("yyyy-MM-dd")" />
                             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
                         </div>
                         <div class="form-group">
