--- a/Views/Doctor/Payments.cshtml
+++ b/Views/Doctor/Payments.cshtml
@@ -3,7 +3,7 @@
     Layout = "_Layout";
     ViewData["Title"] = "Payments";
     var doctorName = ViewData["DoctorName"] as string ?? "Doctor";
-    var offlineTag = "[OFFLINE PAYMENT]";
+    var offlineTag = "";
 }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 <link rel="stylesheet" href="~/css/payments.css" asp-append-version="true" />
