--- a/Views/Patient/Create.cshtml
+++ b/Views/Patient/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create Patient";
 }
 
-<!-- Link to Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-<!-- Link to jQuery (Crucial for $.ajax to work) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 <div class="container mt-5">
@@ -20,7 +18,7 @@
         </div>
         <div class="col-md-6">
             <label asp-for="DateOfBirth" class="form-label"></label>
-            <input asp-for="DateOfBirth" class="form-control" type="date" />
+            <input asp-for="DateOfBirth" class="form-control" type="date" max="@DateTime.Now.ToString("yyyy-MM-dd")" />
             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
         <div class="col-md-6">
